data/derived/sp14/progs/unify/prog2605.ml.out
Characters 13-21:
  List.combine (ee, zz);;
               ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
